<resources>
    <string name="app_name">RecipeRescue</string>
    <string name="action_settings">Settings</string>
    <string name="recipe_name">Name</string>
    <string name="button_submit">Submit</string>
    <string name="ingredient1">Ingredient1</string>
    <string name="title_splash">Splash Screen</string>
    <string name="title_main">Main</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_firebase">Firebase</string>
    <string name="title_f2f">F2F</string>
    <string name="title_spoonaculer">Spoonaculer</string>
    <string name="title_yummly">Yummly</string>
    <string name="debug_instruction">Click the right-up menu and select the activity you want to visit!</string>
    <string name="title_activity_maps">Map</string>
    <string name="findPlace">PlaceFinder</string>
    <string name="cuisine"></string>




    <!-- EULA text -->
    <string name="eula">
    \n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
    language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
    format, or by any other form or means without prior consent, in writing, from APP_NAME.

    \n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
    with the terms of that license, which is described in the following paragraphs.

    \n\nTRADEMARKS:
    \n\n[Software logos, icons, etc that are Trademarked]

    \n\nLICENSE:
    \n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
    or upgrades received as a result of having purchased this app. \"BUYER\" shall be taken as the original
    purchaser of the software.

    \n\nBuyer has the non-exclusive right to the use of software only on a single device. Buyer may not electronically
    transfer the program from one device to another over any type of network. Buyer may not distribute copies
    of the software or the accompanying documentation to others either for a fee or without charge. Buyer may not modify
    or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
    into its constituent source code. Buyer\'s use of the software indicates his/her acceptance of these terms
    and conditions. If buyer does not agree to these conditions, return the distribution media, documentation, and
    associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
    and erase the software from any and all storage devices upon which it may have been installed.

    \n\nThis license agreement shall be governed by the laws of The United States of America, Massachusetts and
    shall inure to the benefit of APP_NAME or its assigns.

    \n\nDISCLAIMER / LIMITATION OF LIABILITY:
    \n\nBuyer acknowledges that the software may not be free from defects and may not satisfy all of buyer\'s
    needs. APP_NAME warrants all media on which the software is distributed for 60 days to be free from defects
    in normal use. The software and any accompanying written materials are licensed \"AS IS\". Buyer\'s exclusive
    remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
    faulty. In no event will APP_NAME be liable for direct, indirect, incidental or consequential damage or
    damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
    even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
    of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
    exclusion may not apply.

    \n\nSPECIFIC RESTRICTIONS:
    \n\nIn accordance with the COMPUTER SOFTWARE RENTAL ACT OF 1990, this software may not be rented, lent or leased.
    \n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
    which does not provide an original package as composed of APP_NAME, including but not limited to all original
    distribution media, documentation, registration cards, and insertions.</string>

    <!-- For future updates -->
    <string name="updates">Placeholder - This is to be used for summary updates </string>
    <string name="title_activity_debug">RecipeRescue(Debug)</string>
    <string name="title_activity_food_page">FoodPage</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_beverage_page">BeveragePage</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_food_page2">FoodPage2</string>
    <string name="title_activity_recipe_carousel">recipe_carousel</string>
    <string name="title_activity_recipe_api">RecipeAPIActivity</string>
    <string name="title_activity_beverage_page2">BeveragePage2</string>
</resources>
